--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Nick Cameron <nrc@ncameron.org>"]
 edition = "2018"
 repository = "https://github.com/nrc/proc-macro-rules"
-description = "Emulate macro-rules pattern matching in proc macros"
+description = "Emulate macro-rules pattern matching in procedural macros"
 license = "Apache-2.0/MIT"
 
 [dependencies]
