--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Nick Cameron <nrc@ncameron.org>"]
 edition = "2018"
 repository = "https://github.com/nrc/proc-macro-rules"
 description = "Emulate macro-rules pattern matching in procedural macros"
+readme = "README.md"
 license = "Apache-2.0/MIT"
 
 [dependencies]
