--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ license = "Apache-2.0/MIT"
 [dependencies]
 proc-macro-rules-macros = "0.1.1"
 proc-macro2 = "0.4.21"
+proc-macro-hack = "0.5"
 syn = { version = "0.15.0", features = ["full", "extra-traits"] }
 
 [dev-dependencies]
