Add an example of converting a decl macro to a proc macro

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,5 +22,9 @@ members = [
     "macros",
 ]
 
+[[example]]
+name = "macro_rules"
+crate-type = ["proc-macro"]
+
 [patch.crates-io]
 proc-macro-rules-macros = { path = "macros" }
