--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "proc-macro-rules-macros"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Nick Cameron <nrc@ncameron.org>"]
 edition = "2018"
 repository = "https://github.com/nrc/proc-macro-rules"
@@ -12,6 +12,7 @@ license = "Apache-2.0/MIT"
 proc-macro = true
 
 [dependencies]
+proc-macro-hack = "0.5.20"
 quote = "1.0.26"
 syn = { version = "2.0.15", features = ["full", "extra-traits"] }
 proc-macro2 = "1.0.56"
