--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,7 @@ readme = "README.md"
 license = "Apache-2.0/MIT"
 
 [dependencies]
-proc-macro-hack = "0.5.20"
-proc-macro-rules-macros = { path = "macros" }
+proc-macro-rules-macros = "0.2.0"
 proc-macro2 = "1.0.56"
 syn = { version = "2.0.15", features = ["full", "extra-traits"] }
 
