--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -12,6 +12,7 @@ license = "Apache-2.0/MIT"
 proc-macro = true
 
 [dependencies]
+once_cell = "1.17.1"
 quote = "1.0.26"
 syn = { version = "2.0.15", features = ["full", "extra-traits"] }
 proc-macro2 = "1.0.56"
